--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-native-animatable": "^1.2.4",
     "react-native-config": "^0.10.0",
     "react-native-device-info": "0.11.0",
+    "react-native-gesture-handler": "^1.0.0-alpha.41",
     "react-native-i18n": "1.0.0",
+    "react-native-tab-view": "^0.0.74",
     "react-navigation": "1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
