--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "apisauce": "^0.14.2",
     "crypto-js": "^3.1.9-1",
+    "emoji-regex": "^6.5.1",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.17.4",
